--- a/excel_comp/authentication/templates/registration/auth.html
+++ b/excel_comp/authentication/templates/registration/auth.html
@@ -17,7 +17,7 @@
 </style>
 {% endblock %} 
   {% block content %} 
-  <main class="page-container">
+  <main class="page-container" id="container">
     <div class="container">
       <div class="details">
         <div id="image1"> <img src="{% static 'authentication/images/Excel_Comp.png' %}"  alt=""></div>
